partman-base (123) UNRELEASED; urgency=low

  [ Jérémy Bobbio ]
  * Improve display of virtio virtual disks.

 -- Jérémy Bobbio <lunar@debian.org>  Fri, 11 Jul 2008 08:03:52 +0000

partman-base (122) unstable; urgency=low

  [ Otavio Salvador ]
  * Do not list /dev/mtd devices since they aren't supported by parted.

  [ Updated translations ]
  * Finnish (fi.po) by Esko Arajärvi
  * Turkish (tr.po) by Mert Dirik

 -- Martin Michlmayr <tbm@cyrius.com>  Sun, 06 Jul 2008 15:51:35 +0300

partman-base (121) unstable; urgency=low

  [ Frans Pop ]
  * Add divider below "Use as" in the partition options dialog. If the
    partition is used for encryption, "Encryption method" will also be
    above the divider. As changing these option changes defaults and what
    other options are available, this provides a useful visual separation.

  [ Otavio Salvador ]
  * Update to GNU Parted 1.8: Change build-depends to libparted1.8-dev

  [ Updated translations ]
  * Esperanto (eo.po) by Serge Leblanc
  * Basque (eu.po) by Iñaki Larrañaga Murgoitio
  * Slovenian (sl.po) by Matej Kovacic
  * Turkish (tr.po) by Mert Dirik
  
 -- Otavio Salvador <otavio@debian.org>  Sat, 21 Jun 2008 17:02:06 -0300

partman-base (120) unstable; urgency=high

  [ Jérémy Bobbio ]
  * Fix partition numbering when confirming changes.  Closes: #481433

  [ Frans Pop ]
  * Urgency high for inclusion in Beta 2 release.

  [ Updated translations ]
  * Belarusian (be.po) by Pavel Piatruk
  * Kurdish (ku.po) by Erdal Ronahi
  * Marathi (mr.po) by Sampada
  * Romanian (ro.po) by Eddy Petrișor
  * Turkish (tr.po) by Mert Dirik

 -- Frans Pop <fjp@debian.org>  Mon, 26 May 2008 12:54:24 +0200

partman-base (119) unstable; urgency=low

  [ Updated translations ]
  * Dzongkha (dz.po) by Jurmey Rabgay(Bongop) (DIT,BHUTAN)
  * Basque (eu.po) by Iñaki Larrañaga Murgoitio
  * Hebrew (he.po) by Lior Kaplan
  * Indonesian (id.po) by Arief S Fitrianto
  * Marathi (mr.po) by Sampada
